# umst-ucrs

./: .gitignore  .umst-pins.toml  CHANGELOG.md  CREDIT-SYSTEM.md  Dockerfile  EXPERIMENTS_AND_ROADMAP.md  FOUNDATION.md  LICENSE  PROOF-STATUS.md  README.md
.github/workflows/: ci.yml  haskell.yml  lean.yml  python.yml  rust.yml
Docs/: HLC_SIDECAR.md  LOGGING_POLICY.md  grafana-ucrs-dashboard.json
Docs/Media/: e1_topology_cost.csv
Haskell/: umst-ucrs-properties.cabal
Haskell/src/Umst/Ucrs/: Credit.hs  Gate.hs  Landauer.hs
Haskell/test/: Spec.hs
Lean/: TensorLandauer.lean  lake-manifest.json  lakefile.lean
Lean/Ucrs/: L1_LandauerNonneg.lean  L2_TensorLandauer.lean  L3_CreditGreedy.lean  L4_GateAdmit.lean  L5_ClockCoalgebra.lean  L6_ByzantineIsolation.lean  L7_SyncOverhead.lean  L8_WireMonotone.lean
Python/sim/: byzantine_test.py  clock.py  credit.py  credit_convergence.py  drift_monte_carlo.py  epoch_overflow.py  landauer.py  network_topology.py
Python/tests/: conftest.py  test_network_topology.py  test_stubs.py
Rust/: Cargo.toml
Rust/benches/: sync_cost_bench.rs
Rust/fixtures/: ucrs_gate_cd_vectors.json  ucrs_gate_full_vectors.json
Rust/src/: clock.rs  credit.rs  decision_tree.rs  design_sheaf.rs  frame_spine.rs  gate.rs  landauer.rs  lib.rs  main.rs  observation.rs  p2p.rs  rapl.rs  telemetry.rs  wire.rs
Rust/src/crypto/: error.rs  mod.rs
Rust/src/crypto/hash/: mod.rs  sha3_256.rs
Rust/src/crypto/kem/: ml_kem_768.rs  mod.rs
Rust/src/crypto/sig/: ml_dsa_65.rs  mod.rs  slh_dsa_128s.rs
Rust/tests/: credit_test.rs  gate_cd_drift_fixture.rs  gate_full_conjunct_drift_fixture.rs  integration_test.rs  s0_crypto_ucrs_parity.rs  wire_v2_fixture.rs
fixtures/: wire_v2_observed_at.json
scripts/: umst-ucrs.service
